# memochan

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: build_installer.sh  create-dmg.sh  installer.nsi
src/: app.rs  main.rs  message.rs
src/config/: font.rs  mod.rs  theme.rs
src/editor/: highlight.rs
src/theme/: theme.rs
src/view/: about_dialog.rs  dropdown.rs  main_view.rs  menu_bar.rs  mod.rs  status_bar.rs
