[package]
name = "memochan"
version = "0.1.0"
edition = "2021"
authors = ["ppugend"]
license = "MIT"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "lazy", "image"] }
rfd = "0.14"
tokio = { version = "1", features = ["fs", "io-util"] }
chrono = "0.4"

[profile.release]
opt-level = 3     
lto = true        
codegen-units = 1 
panic = "abort"   
strip = true      