[package]
name = "memochan"
version = "0.2.0"
edition = "2021"
authors = ["ppugend"]
license = "MIT"
rust-version = "1.93.0"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Native bundling configuration
# Usage:
#   macOS:   cargo bundle --release
#   Windows: cargo bundle --release (requires WiX Toolset)
#   Linux:   cargo bundle --release (generates .deb)
[package.metadata.bundle]
name = "MemoChan"
identifier = "com.memochan.app"
icon = ["assets/images/appicon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025 ppugend. MIT License."
category = "Utility"
short_description = "A memo application"
long_description = "MemoChan - A simple and elegant memo application built with egui"

# macOS specific
osx_minimum_system_version = "10.13"

# Linux specific
[package.metadata.bundle.linux]
files = { "/usr/share/icons/hicolor/256x256/apps/memochan.png" = "assets/images/appicon.png" }

# Windows specific
[package.metadata.bundle.windows]
wix_license = "LICENSE"